fix Button overflow in Safari

--- a/src/components/atoms/Button/styles.module.scss
+++ b/src/components/atoms/Button/styles.module.scss
@@ -7,6 +7,9 @@
     margin-left: -32px;
   }
   position: relative;
+  .ellipse {
+    margin: 1px 0;
+  }
   .arrow, span {
     transition: transform .4s;
   }
